# executorch-matrix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: executorch-api-reference.md
examples/sample-model/: README.md  config.json  example-report.json  example-report.md
src/executorch_matrix/: __init__.py  cli.py  recommend.py
src/executorch_matrix/catalog/: __init__.py  catalog.py
src/executorch_matrix/export/: __init__.py  models.py  variants.py
src/executorch_matrix/measure/: __init__.py  device_runner.py  etdump_parser.py
tests/: test_catalog.py  test_cli.py  test_device_runner.py  test_etdump_parser.py  test_export_variants.py  test_recommend.py
tests/fixtures/: etdump_fixture.py  sample.etdump
